# flutter_app

./: .env  .flutter-plugins-dependencies  .gitignore  AGENTS.md  APP.md  GEMINI.md  README.md  firebase.json  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
android/app/: google-services.json
assets/data/: fake_users.json  traits.json
assets/shaders/: metaball.frag
backend/: README-testing.md  README.md
backend/functions/: .env  .env.example  package-lock.json  package.json  pyproject.toml  requirements.txt  test-backend.js  test-llm.js  test-llm.py  test-matching-algorithm.py  tsconfig.json
backend/functions/lib/: agents.js  agents.js.map  index.js  index.js.map  llm_service.js  llm_service.js.map
backend/functions/src/: agents.ts  chat_service.ts  index.ts  llm_service.ts
backend/functions/src/firebase_functions_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ios/Runner/: GoogleService-Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/.dart_tool/: package_config.json  package_graph.json
lib/data/: conversations_provider.dart  my_posts.dart
lib/models/: README.md  base_user_data.dart  conversation.dart  match_analysis.dart  match_profile.dart  user_data.dart
lib/pages/: canvas_drawing_page.dart  chat_history_page.dart  chat_page.dart  create_post_page.dart  feature_selection_page.dart  home_page.dart  match_analysis_page.dart  match_result_page.dart  post_detail_page.dart  post_page.dart  profile_page.dart  (+1 more)
scripts/: generate_fake_data.dart  test_debug_llm.dart
(+54 files in other folders)
